--- a/BoardDemo/export_presets.cfg
+++ b/BoardDemo/export_presets.cfg
@@ -5,9 +5,9 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path=""
+include_filter="*.json"
+exclude_filter=".import/*"
+export_path="../../../../Desktop/Export/V3 Files/Windows/Life-AlphaDemo.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -16,7 +16,7 @@ script_encryption_key=""
 custom_template/debug=""
 custom_template/release=""
 binary_format/64_bits=true
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
@@ -47,9 +47,9 @@ platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path=""
+include_filter="*.json"
+exclude_filter=".import/*"
+export_path="../../../../Desktop/Export/V3 Files/Life-AlphaDemo.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -64,3 +64,35 @@ html/custom_html_shell=""
 html/head_include=""
 html/canvas_resize_policy=2
 html/experimental_virtual_keyboard=false
+
+[preset.2]
+
+name="Mac OSX"
+platform="Mac OSX"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter="*.json"
+exclude_filter=".import/*"
+export_path="../../../../Desktop/Export/V3 Files/Mac/Life-AlphaDemo.zip"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.2.options]
+
+custom_template/debug=""
+custom_template/release=""
+application/name=""
+application/info="Made with Godot Engine"
+application/icon=""
+application/identifier=""
+application/signature=""
+application/short_version="1.0"
+application/version="1.0"
+application/copyright=""
+display/high_res=false
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
