--- a/BoardDemo/export_presets.cfg
+++ b/BoardDemo/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=".import/*"
-export_path="../../../../Desktop/Export/V3 Files/Windows/Life-AlphaDemo.exe"
+export_path="../../../../Desktop/Export/V4 Files/Life-AlphaDemo.exe"
 script_export_mode=1
 script_encryption_key=""
 
