--- a/BoardDemo/export_presets.cfg
+++ b/BoardDemo/export_presets.cfg
@@ -31,7 +31,7 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon=""
+application/icon="res://icon.png"
 application/file_version=""
 application/product_version=""
 application/company_name=""
@@ -84,7 +84,7 @@ custom_template/debug=""
 custom_template/release=""
 application/name=""
 application/info="Made with Godot Engine"
-application/icon=""
+application/icon="res://icon.png"
 application/identifier=""
 application/signature=""
 application/short_version="1.0"
