--- a/BoardDemo/export_presets.cfg
+++ b/BoardDemo/export_presets.cfg
@@ -49,7 +49,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=".import/*"
-export_path="D:/RikkiGameBuilds/LifeReImagined_0116/index.html"
+export_path="../../../builds/LifeReImagined_0118/index.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -60,20 +60,10 @@ custom_template/release=""
 variant/export_type=0
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
-html/export_icon=true
 html/custom_html_shell=""
 html/head_include=""
 html/canvas_resize_policy=2
-html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
-progressive_web_app/enabled=false
-progressive_web_app/offline_page=""
-progressive_web_app/display=1
-progressive_web_app/orientation=0
-progressive_web_app/icon_144x144=""
-progressive_web_app/icon_180x180=""
-progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color( 0, 0, 0, 1 )
 
 [preset.2]
 
@@ -97,7 +87,6 @@ application/info="Made with Godot Engine"
 application/icon="res://icon.png"
 application/identifier=""
 application/signature=""
-application/app_category="Games"
 application/short_version="1.0"
 application/version="1.0"
 application/copyright=""
@@ -143,21 +132,20 @@ version/name="1.0"
 package/unique_name="org.godotengine.$genname"
 package/name=""
 package/signed=true
-package/classify_as_game=true
-package/retain_data_on_uninstall=false
 launcher_icons/main_192x192=""
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
 graphics/32_bits_framebuffer=true
 graphics/opengl_debug=false
 xr_features/xr_mode=0
+xr_features/degrees_of_freedom=0
 xr_features/hand_tracking=0
+xr_features/focus_awareness=false
 screen/immersive_mode=true
 screen/support_small=true
 screen/support_normal=true
 screen/support_large=true
 screen/support_xlarge=true
-user_data_backup/allow=false
 command_line/extra_args=""
 apk_expansion/enable=false
 apk_expansion/SALT=""
