--- a/BoardDemo/export_presets.cfg
+++ b/BoardDemo/export_presets.cfg
@@ -8,22 +8,22 @@ export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=".import/*"
 export_path="../../../../Desktop/Export/V6 Files/Life-AlphaDemo.exe"
+patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.0.options]
 
-custom_template/debug=""
-custom_template/release=""
-binary_format/64_bits=true
-binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
+binary_format/64_bits=true
+binary_format/embed_pck=true
+custom_template/release=""
+custom_template/debug=""
 codesign/enable=false
-codesign/identity_type=0
 codesign/identity=""
 codesign/password=""
 codesign/timestamp=true
@@ -49,21 +49,19 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=".import/*"
-export_path="../../../builds/LifeReImagined_0124/index.html"
+export_path="../../builds/LRtest2.html"
+patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.1.options]
 
-custom_template/debug=""
-custom_template/release=""
-variant/export_type=0
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/custom_html_shell=""
 html/head_include=""
-html/canvas_resize_policy=2
-html/experimental_virtual_keyboard=false
+custom_template/release=""
+custom_template/debug=""
 
 [preset.2]
 
@@ -75,6 +73,7 @@ export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=".import/*"
 export_path="../../../../Desktop/Export/V6 Files/Life-AlphaDemo.zip"
+patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
@@ -93,6 +92,12 @@ application/copyright=""
 display/high_res=false
 privacy/camera_usage_description=""
 privacy/microphone_usage_description=""
+codesign/enable=false
+codesign/identity=""
+codesign/timestamp=true
+codesign/hardened_runtime=true
+codesign/entitlements=""
+codesign/custom_options=PoolStringArray(  )
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
@@ -107,49 +112,49 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path=""
+patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.3.options]
 
+graphics/32_bits_framebuffer=true
+xr_features/xr_mode=0
+xr_features/degrees_of_freedom=0
+xr_features/hand_tracking=0
+one_click_deploy/clear_previous_install=false
 custom_template/debug=""
 custom_template/release=""
 custom_template/use_custom_build=false
-custom_template/export_format=0
-architectures/armeabi-v7a=true
-architectures/arm64-v8a=true
-architectures/x86=false
-architectures/x86_64=false
+command_line/extra_args=""
+version/code=1
+version/name="1.0"
+package/unique_name="org.godotengine.$genname"
+package/name=""
+package/signed=true
+screen/immersive_mode=true
+screen/orientation=0
+screen/support_small=true
+screen/support_normal=true
+screen/support_large=true
+screen/support_xlarge=true
+screen/opengl_debug=false
+launcher_icons/main_192x192=""
+launcher_icons/adaptive_foreground_432x432=""
+launcher_icons/adaptive_background_432x432=""
 keystore/debug=""
 keystore/debug_user=""
 keystore/debug_password=""
 keystore/release=""
 keystore/release_user=""
 keystore/release_password=""
-one_click_deploy/clear_previous_install=false
-version/code=1
-version/name="1.0"
-package/unique_name="org.godotengine.$genname"
-package/name=""
-package/signed=true
-launcher_icons/main_192x192=""
-launcher_icons/adaptive_foreground_432x432=""
-launcher_icons/adaptive_background_432x432=""
-graphics/32_bits_framebuffer=true
-graphics/opengl_debug=false
-xr_features/xr_mode=0
-xr_features/degrees_of_freedom=0
-xr_features/hand_tracking=0
-xr_features/focus_awareness=false
-screen/immersive_mode=true
-screen/support_small=true
-screen/support_normal=true
-screen/support_large=true
-screen/support_xlarge=true
-command_line/extra_args=""
 apk_expansion/enable=false
 apk_expansion/SALT=""
 apk_expansion/public_key=""
+architectures/armeabi-v7a=true
+architectures/arm64-v8a=true
+architectures/x86=false
+architectures/x86_64=false
 permissions/custom_permissions=PoolStringArray(  )
 permissions/access_checkin_properties=false
 permissions/access_coarse_location=false
