--- a/BoardDemo/export_presets.cfg
+++ b/BoardDemo/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=".import/*"
-export_path="../../../../Desktop/Export/V6 Files/Life-AlphaDemo.exe"
+export_path="./Life-AlphaDemo.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -72,7 +72,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=".import/*"
-export_path="../../../../Desktop/Export/V6 Files/Life-AlphaDemo.zip"
+export_path="./Life-AlphaDemo.zip"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
