--- a/BoardDemo/export_presets.cfg
+++ b/BoardDemo/export_presets.cfg
@@ -8,22 +8,22 @@ export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=".import/*"
 export_path="./Life-AlphaDemo.exe"
+patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.0.options]
 
-custom_template/debug=""
-custom_template/release=""
-binary_format/64_bits=true
-binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
+binary_format/64_bits=true
+binary_format/embed_pck=true
+custom_template/release=""
+custom_template/debug=""
 codesign/enable=false
-codesign/identity_type=0
 codesign/identity=""
 codesign/password=""
 codesign/timestamp=true
@@ -49,21 +49,19 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=".import/*"
-export_path="../../builds/LRtest2.html"
+export_path="../../builds/LRtest4.html"
+patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.1.options]
 
-custom_template/debug=""
-custom_template/release=""
-variant/export_type=0
-vram_texture_compression/for_desktop=true
-vram_texture_compression/for_mobile=false
+vram_texture_compression/for_desktop=false
+vram_texture_compression/for_mobile=true
 html/custom_html_shell=""
 html/head_include=""
-html/canvas_resize_policy=2
-html/experimental_virtual_keyboard=false
+custom_template/release=""
+custom_template/debug=""
 
 [preset.2]
 
@@ -75,6 +73,7 @@ export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=".import/*"
 export_path="./Life-AlphaDemo.zip"
+patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
@@ -93,6 +92,12 @@ application/copyright=""
 display/high_res=false
 privacy/camera_usage_description=""
 privacy/microphone_usage_description=""
+codesign/enable=false
+codesign/identity=""
+codesign/timestamp=true
+codesign/hardened_runtime=true
+codesign/entitlements=""
+codesign/custom_options=PoolStringArray(  )
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
@@ -107,49 +112,49 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path=""
+patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.3.options]
 
+graphics/32_bits_framebuffer=true
+xr_features/xr_mode=0
+xr_features/degrees_of_freedom=0
+xr_features/hand_tracking=0
+one_click_deploy/clear_previous_install=false
 custom_template/debug=""
 custom_template/release=""
 custom_template/use_custom_build=false
-custom_template/export_format=0
-architectures/armeabi-v7a=true
-architectures/arm64-v8a=true
-architectures/x86=false
-architectures/x86_64=false
+command_line/extra_args=""
+version/code=1
+version/name="1.0"
+package/unique_name="org.EarthGames.LifeReimagined"
+package/name="Life Reimagined"
+package/signed=true
+screen/immersive_mode=true
+screen/orientation=0
+screen/support_small=true
+screen/support_normal=true
+screen/support_large=true
+screen/support_xlarge=true
+screen/opengl_debug=false
+launcher_icons/main_192x192=""
+launcher_icons/adaptive_foreground_432x432=""
+launcher_icons/adaptive_background_432x432=""
 keystore/debug=""
 keystore/debug_user=""
 keystore/debug_password=""
 keystore/release=""
 keystore/release_user=""
 keystore/release_password=""
-one_click_deploy/clear_previous_install=false
-version/code=1
-version/name="1.0"
-package/unique_name="org.godmotengine.$genname"
-package/name=""
-package/signed=true
-launcher_icons/main_192x192=""
-launcher_icons/adaptive_foreground_432x432=""
-launcher_icons/adaptive_background_432x432=""
-graphics/32_bits_framebuffer=true
-graphics/opengl_debug=false
-xr_features/xr_mode=0
-xr_features/degrees_of_freedom=0
-xr_features/hand_tracking=0
-xr_features/focus_awareness=false
-screen/immersive_mode=true
-screen/support_small=true
-screen/support_normal=true
-screen/support_large=true
-screen/support_xlarge=true
-command_line/extra_args=""
 apk_expansion/enable=false
 apk_expansion/SALT=""
 apk_expansion/public_key=""
+architectures/armeabi-v7a=false
+architectures/arm64-v8a=true
+architectures/x86=false
+architectures/x86_64=false
 permissions/custom_permissions=PoolStringArray(  )
 permissions/access_checkin_properties=false
 permissions/access_coarse_location=false
@@ -296,3 +301,72 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+
+[preset.4]
+
+name="iOS"
+platform="iOS"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../../builds/LRtest2.ipa"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.4.options]
+
+custom_template/debug=""
+custom_template/release=""
+application/app_store_team_id="darganfrierson"
+application/provisioning_profile_uuid_debug=""
+application/code_sign_identity_debug="iPhone Developer"
+application/export_method_debug=0
+application/provisioning_profile_uuid_release=""
+application/code_sign_identity_release=""
+application/export_method_release=0
+application/name=""
+application/info="Made with Godot Engine"
+application/identifier="org.EarthGames.LifeReimagined"
+application/signature=""
+application/short_version="1.0"
+application/version="1.0"
+application/copyright=""
+capabilities/arkit=false
+capabilities/camera=false
+capabilities/access_wifi=false
+capabilities/game_center=false
+capabilities/in_app_purchases=false
+capabilities/push_notifications=false
+user_data/accessible_from_files_app=false
+user_data/accessible_from_itunes_sharing=false
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
+privacy/photolibrary_usage_description=""
+orientation/portrait=false
+orientation/landscape_left=true
+orientation/landscape_right=true
+orientation/portrait_upside_down=false
+required_icons/iphone_120x120="res://IconV2 copy 3.png"
+required_icons/ipad_76x76="res://IconV2 copy 2.png"
+required_icons/app_store_1024x1024="res://IconV2 copy.png"
+optional_icons/iphone_180x180=""
+optional_icons/ipad_152x152=""
+optional_icons/ipad_167x167=""
+optional_icons/spotlight_40x40=""
+optional_icons/spotlight_80x80=""
+landscape_launch_screens/iphone_2436x1125=""
+landscape_launch_screens/iphone_2208x1242=""
+landscape_launch_screens/ipad_1024x768=""
+landscape_launch_screens/ipad_2048x1536=""
+portrait_launch_screens/iphone_640x960=""
+portrait_launch_screens/iphone_640x1136=""
+portrait_launch_screens/iphone_750x1334=""
+portrait_launch_screens/iphone_1125x2436=""
+portrait_launch_screens/ipad_768x1024=""
+portrait_launch_screens/ipad_1536x2048=""
+portrait_launch_screens/iphone_1242x2208=""
+architectures/armv7=false
+architectures/arm64=true
